S9-Implement display with flex-direction row and flex-wrap to wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@ body{
     border-bottom: 4px solid #000040;
 }
 
+.gallery{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 
 .gallery img{
     width: 100%;
