S10.1-Set Align Items stretch

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,13 @@ body{
 
 .gallery{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction:row;
+    flex-wrap: wrap; 
+    justify-content:center;
+    align-items: stretch;
+    background-color: green;
 }
+
 
 .gallery img{
     width: 100%;
