S10.2- Set align-items center

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body{
     flex-direction:row;
     flex-wrap: wrap; 
     justify-content:center;
-    align-items: stretch;
+    align-items: center;
     background-color: green;
 }
 
