s11- add padding, margn and max-width

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,11 @@ body{
     flex-wrap: wrap; 
     justify-content:center;
     align-items: center;
-    background-color: green;
+    /* background-color: green; */
+    padding: 20px 10px;
+    max-width: 1400px;
+    margin: 0 auto;
+
 }
 
 
