--- a/css/styles.css
+++ b/css/styles.css
@@ -35,5 +35,6 @@ body{
     width: 100%;
     max-width: 350px;
     height: 300px;
+    object-fit: cover; /*Work with aspect ratio and solve image distortion*/
 
 }
