--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body{
     border-bottom: 4px solid #000040;
 }
 
+/*FLEX-CONTAINER*/
 .gallery{
     display: flex;
     flex-direction:row;
@@ -27,14 +28,15 @@ body{
     padding: 20px 10px;
     max-width: 1400px;
     margin: 0 auto;
-
+    gap: 16px;
 }
 
-
+/*FLEX-ITEM*/
 .gallery img{
     width: 100%;
     max-width: 350px;
     height: 300px;
     object-fit: cover; /*Work with aspect ratio and solve image distortion*/
-
+    /* padding: 2%; */
+    /* background-color: red; */
 }
